--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.34.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-cache": "^1.1.3",
     "gulp-cssnano": "^2.1.3",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
